added ui with exif data and resizing options

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ server.port=8080
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
 ribbon.ReadTimeout=10000
 ribbon.ConnectTimeout=10000
+
+spring.servlet.multipart.max-file-size=20Mb
+spring.servlet.multipart.max-request-size=25Mb
