--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ ribbon.ConnectTimeout=10000
 
 spring.servlet.multipart.max-file-size=20Mb
 spring.servlet.multipart.max-request-size=25Mb
+
+imaas.supportedProtocols=http,https
