--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,11 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
 ribbon.ReadTimeout=10000
 ribbon.ConnectTimeout=10000
 
+eureka.client.service-url.defaultZone=http://eureka.magellan.chef.at/eureka
 #eureka.client.enabled=false
 #ribbon.eureka.enabled=false
 
-spring.servlet.multipart.max-file-size=20Mb
-spring.servlet.multipart.max-request-size=25Mb
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=25MB
 
 imaas.supportedProtocols=http,https
