--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ eureka.client.service-url.defaultZone=http://eureka.magellan.chef.at/eureka
 #eureka.client.enabled=false
 #ribbon.eureka.enabled=false
 
+management.endpoints.enabled-by-default=true
+management.endpoints.web.exposure.include=*
+
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=25MB
 
